# understory

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.tickets/: und-278b.md  und-3bb1.md  und-50ec.md  und-789b.md  und-eac0.md
assets/fonts/: README.md
benches/: Cargo.toml
benches/benches/: index_compare_backends.rs  outline_inspector.rs  property.rs  selection.rs  ui_box_tree.rs
docs/: issue_focus_direction_and_reading_order.md  issue_focus_navigation_and_policies.md  issue_understory_imaging.md  understory_integration_guidelines.md
examples/: Cargo.toml  README.md
examples/examples/: box_tree_basics.rs  box_tree_visible_list.rs  display_vello_basics.rs  focus_basics.rs  imaging_basics.rs  imaging_gradients.rs  imaging_images.rs  imaging_pictures.rs  outline_inspector.rs  outline_property_grid.rs  outline_virtual_list.rs  overstory_autocomplete_basics.rs  overstory_showcase.rs  overstory_visual_demo.rs  responder_basics.rs  responder_box_tree.rs  responder_focus.rs  responder_hover.rs  taffy_box_tree.rs  timing_queue.rs
examples/src/: display_resources.rs  lib.rs  llm_api.rs  overstory_display.rs  vello_headless.rs  vello_winit.rs
overstory/: Cargo.toml  README.md
overstory/src/: built_in_styles.rs  color.rs  compose.rs  display.rs  element.rs  lib.rs  properties.rs  runtime.rs  scene.rs  surface.rs  timer.rs  ui.rs  widget.rs
overstory/src/widgets/: button.rs  dock.rs  dropdown.rs  mod.rs  scroll_view.rs  splitter.rs  text_block.rs  text_input.rs  tooltip.rs
overstory_autocomplete/: Cargo.toml  README.md
overstory_autocomplete/src/: lib.rs
overstory_inspector/: Cargo.toml  README.md
overstory_inspector/src/: lib.rs  property_grid.rs  tree.rs
overstory_list/: Cargo.toml  README.md
overstory_list/src/: lib.rs  list.rs
overstory_transcript/: Cargo.toml  README.md
overstory_transcript/src/: lib.rs  view.rs
overstory_tree/: Cargo.toml  README.md
overstory_tree/src/: lib.rs  tree.rs
plans/: overstory_0_plan.md  overstory_autocomplete_plan.md  overstory_transcript_plan.md
understory_axis/: Cargo.toml  README.md
understory_axis/src/: lib.rs
understory_box_tree/: Cargo.toml  README.md
understory_box_tree/src/: damage.rs  lib.rs  tree.rs  types.rs  util.rs
understory_dirty/src/: drain.rs  drain_builder.rs  graph.rs  tracker.rs
understory_display/: Cargo.toml  README.md
understory_display/src/: diff_impl.rs  ids.rs  item.rs  lib.rs  list.rs  ops.rs  text.rs  tree.rs
understory_display_imaging/: Cargo.toml
understory_display_imaging/src/: lib.rs
understory_display_vello/: Cargo.toml
understory_display_vello/src/: lib.rs
understory_event_state/: Cargo.toml  README.md
understory_event_state/src/: click.rs  drag.rs  focus.rs  hover.rs  lib.rs
understory_focus/: Cargo.toml  README.md
understory_focus/src/: adapters.rs  lib.rs
understory_focus/src/adapters/: box_tree.rs
understory_guide/: Cargo.toml
understory_imaging/: Cargo.toml  README.md
understory_imaging/src/: lib.rs
understory_imaging_ref/: Cargo.toml  README.md
understory_imaging_ref/src/: lib.rs
understory_imaging_skia/: Cargo.toml  README.md
understory_imaging_skia/src/: lib.rs
understory_imaging_snapshot_tests/: Cargo.toml  README.md
understory_imaging_snapshot_tests/src/: lib.rs
understory_imaging_snapshot_tests/src/cases/: basic.rs  clips.rs  compositing.rs  fill_rules.rs  filters.rs  gradients.rs  images.rs  mod.rs  pictures.rs  strokes.rs
understory_imaging_snapshot_tests/tests/: skia_snapshots.rs  vello_cpu_snapshots.rs  vello_snapshots.rs
understory_imaging_snapshot_tests/tests/common/: mod.rs
understory_imaging_svg/: Cargo.toml  README.md
understory_imaging_svg/src/: lib.rs
understory_imaging_vello/: Cargo.toml  README.md
understory_imaging_vello/src/: lib.rs
understory_imaging_vello_cpu/: Cargo.toml  README.md
understory_imaging_vello_cpu/src/: lib.rs
understory_imaging_web_canvas/: Cargo.toml  README.md
understory_imaging_web_canvas/src/: lib.rs
understory_index/: README.md
understory_index/src/: backend.rs  damage.rs  index.rs  lib.rs  types.rs
understory_index/src/backends/: bvh.rs  flatvec.rs  grid.rs  mod.rs  rtree.rs
understory_inspector/: Cargo.toml  README.md
understory_inspector/src/: config.rs  inspector.rs  lib.rs  model.rs
understory_outline/: Cargo.toml  README.md
understory_outline/src/: expansion.rs  indexed.rs  lib.rs  model.rs  outline.rs
understory_precise_hit/src/: stroke.rs
understory_property/: Cargo.toml  README.md
understory_property/src/: id.rs  lib.rs  metadata.rs  object.rs  registry.rs  store.rs  value.rs
understory_responder/: Cargo.toml  README.md
understory_responder/src/: click.rs  dispatcher.rs  focus.rs  hover.rs  lib.rs  router.rs  types.rs
understory_responder/src/adapters/: box_tree.rs  hit2d.rs  mod.rs
understory_selection/: Cargo.toml  README.md
understory_selection/src/: lib.rs
understory_selection/tests/: selection.rs
understory_style/: Cargo.toml  README.md
understory_style/src/: lib.rs  resolve.rs  style.rs  stylesheet.rs  theme.rs
understory_taffy/: Cargo.toml  README.md
understory_taffy/src/: lib.rs
understory_text_imaging/: Cargo.toml  README.md
understory_text_imaging/src/: lib.rs
understory_timing/: CHANGELOG.md  Cargo.toml  README.md
understory_timing/src/: lib.rs
understory_transform_encoder/: Cargo.toml  README.md
understory_transform_encoder/src/: lib.rs
understory_view2d/: Cargo.toml  README.md
understory_view2d/src/: lib.rs  modes.rs  viewport1d.rs  viewport2d.rs
understory_virtual_list/: CHANGELOG.md  Cargo.toml  README.md
understory_virtual_list/src/: fixed.rs  grid_track.rs  lib.rs  model.rs  prefix_sum.rs  scalar.rs  sparse.rs  tail_anchored.rs  virtual_list.rs
xtask/: Cargo.toml
xtask/src/: main.rs
