[package]
name = "understory_event_state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common event state managers for UI."
keywords = ["ui", "events", "state", "no_std", "understory"]
categories = ["gui", "no-std"]

[dependencies]
kurbo = { workspace = true, default-features = false, optional = true }


[lints]
workspace = true

[features]
default = ["std", "drag", "click"]

# This crate is `no_std` + `alloc` by default; `std` is only needed when
# dependants prefer to compile with the standard library.
# Forward our `std`/`libm` features to Kurbo. With workspace `kurbo` having
# default-features = false, this fully controls Kurbo's std/no_std mode.
std = ["kurbo?/std"]
libm = ["kurbo?/libm"]
click = ["dep:kurbo"]
drag = ["dep:kurbo"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
