[package]
name = "understory_imaging_ref"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reference imaging backend for testing and experimentation."
keywords = ["graphics", "rendering", "imaging"]
categories = ["graphics", "rendering"]

[dependencies]
understory_imaging = { path = "../understory_imaging", default-features = false }
peniko.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
libm = ["understory_imaging/libm"]
std = ["understory_imaging/std"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
