[package]
name = "understory_imaging_skia"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "Skia backend implementation of the understory_imaging IR."
repository = "https://github.com/endoli/understory"

[dependencies]
kurbo.workspace = true
understory_imaging = { path = "../understory_imaging" }
peniko.workspace = true
skia-safe = "0.90.0"

[lints]
workspace = true

[features]
default = ["std"]
std = ["kurbo/std"]
libm = ["kurbo/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
