[package]
name = "understory_imaging_skia"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Skia backend implementation of the understory_imaging IR."
keywords = ["graphics", "rendering", "imaging", "skia"]
categories = ["graphics", "rendering"]

[dependencies]
kurbo.workspace = true
understory_imaging = { path = "../understory_imaging", default-features = false }
peniko.workspace = true
skia-safe = "0.90.0"

[lints]
workspace = true

[features]
default = ["std"]
std = ["kurbo/std", "understory_imaging/std"]
libm = ["kurbo/libm", "understory_imaging/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
