[package]
name = "understory_imaging_svg"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SVG export backend for Understory imaging IR."
keywords = ["graphics", "rendering", "imaging", "svg"]
categories = ["graphics", "rendering", "no-std"]

[dependencies]
understory_imaging = { path = "../understory_imaging", default-features = false }

kurbo = { workspace = true, default-features = false }
peniko = { workspace = true, default-features = false }

[lints]
workspace = true

[features]
default = ["std"]
std = ["understory_imaging/std", "kurbo/std", "peniko/std"]
libm = ["understory_imaging/libm", "kurbo/libm", "peniko/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
