[package]
name = "understory_imaging_vello_cpu"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "CPU-oriented Vello backend alias for the understory_imaging IR."
repository = "https://github.com/endoli/understory"

[dependencies]
understory_imaging = { path = "../understory_imaging" }
understory_imaging_vello = { path = "../understory_imaging_vello" }
vello_cpu = { workspace = true }
kurbo = { workspace = true }
vello_common = { version = "0.0.4", default-features = false }
peniko = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = ["kurbo/std", "vello_cpu/std"]
libm = ["kurbo/libm", "vello_cpu/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
