[package]
name = "understory_imaging_vello_cpu"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CPU-oriented Vello backend alias for the understory_imaging IR."
keywords = ["graphics", "rendering", "imaging", "vello", "cpu"]
categories = ["graphics", "rendering"]

[dependencies]
kurbo = { workspace = true }
peniko = { workspace = true }
understory_imaging = { path = "../understory_imaging", default-features = false }
vello_cpu = { workspace = true }
vello_common = { workspace = true }

[lints]
workspace = true

[features]
default = ["std"]
std = [
  "kurbo/std",
  "understory_imaging/std",
  "vello_cpu/std",
  "vello_cpu/u8_pipeline",
]
libm = [
  "kurbo/libm",
  "understory_imaging/libm",
  "vello_cpu/libm",
  "vello_cpu/u8_pipeline",
]
# TODO: I'm not sure what the right thing to do here is yet for u8 vs f32
f32_pipeline = ["vello_cpu/f32_pipeline"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
