[package]
name = "understory_inspector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side inspector controller over outline projection, selection, and virtualization."
keywords = ["ui", "inspector", "outline", "no_std", "understory"]
categories = ["gui", "data-structures", "no-std"]

[dependencies]
understory_outline = { path = "../understory_outline", default-features = false }
understory_selection = { path = "../understory_selection", default-features = false }
understory_virtual_list = { path = "../understory_virtual_list", default-features = false }

[lints]
workspace = true

[features]
default = ["std"]

# This crate is `no_std` + `alloc` by default; `std` is only needed when
# dependants prefer to compile with the standard library.
std = [
  "understory_outline/std",
  "understory_selection/std",
  "understory_virtual_list/std",
]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
