[package]
name = "understory_text_imaging"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Helpers for expressing text (glyph runs) in the Understory imaging IR."
keywords = ["graphics", "text", "glyphs", "imaging", "understory"]
categories = ["graphics", "rendering"]

[dependencies]
kurbo.workspace = true
peniko.workspace = true
skrifa = "0.39"
png = { version = "0.17", optional = true }
understory_imaging = { path = "../understory_imaging" }

[dev-dependencies]
understory_imaging_ref = { path = "../understory_imaging_ref" }

[lints]
workspace = true

[features]
default = ["std"]
std = ["kurbo/std", "png"]
libm = ["kurbo/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
