[package]
name = "understory_transform_encoder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "An encoder from UI events to transform actions."
keywords = ["ui", "ui-events", "transform", "no_std", "understory"]
categories = ["gui", "graphics", "no-std"]

[dependencies]
kurbo.workspace = true
understory_view2d = { path = "../understory_view2d", default-features = false, optional = true }
ui-events = { version = "0.2.0", default-features = false, features = ["kurbo"] }


[lints]
workspace = true

[features]
# Default to std builds for examples/tests/docs.
default = ["std", "view2d_adapter"]
# Forward our `std`/`libm` features to Kurbo. With workspace `kurbo` having
# default-features = false, this fully controls Kurbo's std/no_std mode.
std = ["kurbo/std"]
libm = ["kurbo/libm"]
# Adapter for `understory_viewport2d::Viewport2D and understory_viewport2D::Viewport1D`.
view2d_adapter = ["dep:understory_view2d"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
