[package]
name = "understory_view2d"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "2D view and viewport primitives for Understory: pan/zoom, coordinate conversion, and view fitting."
keywords = ["ui", "viewport", "camera", "no_std", "understory"]
categories = ["gui", "graphics", "no-std"]

[dependencies]
kurbo.workspace = true

[lints]
workspace = true

[features]
# Default to std builds for examples/tests/docs.
default = ["std"]
# Forward our `std`/`libm` features to Kurbo. With workspace `kurbo` having
# default-features = false, this fully controls Kurbo's std/no_std mode.
std = ["kurbo/std"]
libm = ["kurbo/libm"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
